--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,15 +59,21 @@ jobs:
           path: $APT_CACHE_DIR
           key: ${{runner.os}}-apt
 
+      - name: APT Cache Initialization
+        if: steps.apt-cache.outputs.cache-hit != 'true'
+        run: |
+          sudo mkdir -pv $APT_CACHE_DIR/archives/partial
+          sudo touch $APT_CACHE_DIR/archives/partial/KEEP_ME
+
       - name: Set ENV variables
         run: |
           echo "CI_BRANCH=$(echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }')" >> $GITHUB_ENV
           echo "CI_SECURE_ENV_VARS=$(if [ -z "${{ secrets.something }}" ]; then echo "false"; else echo "true"; fi)" >> $GITHUB_ENV
           echo "CI_EVENT_TYPE=$(if [ "schedule" == "${{ github.event_name }}" ]; then echo "cron"; else echo "${{ github.event_name }}"; fi)" >> $GITHUB_ENV
-          echo "PACKAGES_QT5=$(echo ${PACKAGES_BASE} ${PACKAGES_QT5_BASE})
-          echo "PACKAGES_QML=$(echo ${PACKAGES_BASE} ${PACKAGES_QML_BASE})
-          echo "PACKAGES_COVERAGE=$(echo ${PACKAGES_BASE} ${PACKAGES_QT5_BASE} ${PACKAGES_COVERAGE_BASE})
-          echo "PACKAGES_ALL=$(echo ${PACKAGES_BASE} ${PACKAGES_QT5_BASE} ${PACKAGES_QML_BASE} ${PACKAGES_COVERAGE_BASE})
+          echo "PACKAGES_QT5=$(echo ${PACKAGES_BASE} ${PACKAGES_QT5_BASE}) >> $GITHUB_ENV
+          echo "PACKAGES_QML=$(echo ${PACKAGES_BASE} ${PACKAGES_QML_BASE}) >> $GITHUB_ENV
+          echo "PACKAGES_COVERAGE=$(echo ${PACKAGES_BASE} ${PACKAGES_QT5_BASE} ${PACKAGES_COVERAGE_BASE}) >> $GITHUB_ENV
+          echo "PACKAGES_ALL=$(echo ${PACKAGES_BASE} ${PACKAGES_QT5_BASE} ${PACKAGES_QML_BASE} ${PACKAGES_COVERAGE_BASE}) >> $GITHUB_ENV
           echo "TASK=$(echo "${{matrix.task}}" | awk 'BEGIN { FS = "-" } ; { print $1 }')" >> $GITHUB_ENV
           echo "QT=${QT:-$(echo "${{matrix.task}}" | awk 'BEGIN { FS = "-" } ; { print $2 }')}" >> $GITHUB_ENV
           echo "APT_CACHE_DIR=$(cd ~/apt-cache && pwd)" >> $GITHUB_ENV
@@ -82,33 +88,27 @@ jobs:
           echo "TASK: ${TASK}"
           echo "QT: ${QT}"
 
-      - name: APT Cache Initialization
-        if: steps.apt-cache.outputs.cache-hit != 'true'
-        run: |
-          sudo mkdir -pv $APT_CACHE_DIR/archives/partial
-          sudo touch $APT_CACHE_DIR/archives/partial/KEEP_ME
-
       - name: Register additional package repositories
         run: |
           sudo apt-add-repository -y ppa:ubuntu-toolchain-r/test
           sudo apt-add-repository -y ppa:beineri/opt-qt-5.14.2-focal
-          sudo apt-get -o Dir::Cache=$APT_CACHE_DIR/ update
-          sudo apt-get -o Dir::Cache=$APT_CACHE_DIR/ upgrade -y
+          sudo apt-get -o Dir::Cache=$APT_CACHE_DIR/ update -q
+          sudo apt-get -o Dir::Cache=$APT_CACHE_DIR/ upgrade -y -q
 
       - name: Install qt5 packages
         if: endsWith(${{matrix.task}}, 'qt5')
         run: |
-          sudo apt-get -o Dir::Cache=$APT_CACHE_DIR/ install -y ${PACKAGES_QT5}
+          sudo apt-get -o Dir::Cache=$APT_CACHE_DIR/ install -y -q ${PACKAGES_QT5}
 
       - name: Install qmlui packages
         if: endsWith(${{matrix.task}}, 'qt5qml')
         run: |
-          sudo apt-get -o Dir::Cache=$APT_CACHE_DIR/ install -y ${PACKAGES_QML}
+          sudo apt-get -o Dir::Cache=$APT_CACHE_DIR/ install -y -q ${PACKAGES_QML}
 
       - name: Install coverage packages
         if: startsWith(${{matrix.task}}, 'coverage')
         run: |
-          sudo apt-get -o Dir::Cache=$APT_CACHE_DIR/ install -y ${PACKAGES_COVERAGE}
+          sudo apt-get -o Dir::Cache=$APT_CACHE_DIR/ install -y -q ${PACKAGES_COVERAGE}
 
       - name: Setup ccache
         uses: Chocobo1/setup-ccache-action@v1
