--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,24 +48,11 @@ jobs:
         qt514serialport
       PACKAGES_COVERAGE_BASE:
         lcov
-      APT_CACHE_DIR_BASE: apt-cache
 
     steps:
       - uses: actions/checkout@v2.5.0
         with:
           submodules: false
-
-      - uses: actions/cache@v3
-        id: apt-cache
-        with:
-          path: $APT_CACHE_DIR_BASE
-          key: ${{runner.os}}-apt
-
-      - name: APT Cache Initialization
-        if: steps.apt-cache.outputs.cache-hit != 'true'
-        run: |
-          sudo mkdir -pv $APT_CACHE_DIR_BASE/archives/partial
-          sudo touch $APT_CACHE_DIR_BASE/archives/partial/KEEP_ME
 
       - name: Set ENV variables
         run: |
@@ -78,7 +65,6 @@ jobs:
           echo "PACKAGES_ALL=$(echo ${PACKAGES_BASE} ${PACKAGES_QT5_BASE} ${PACKAGES_QML_BASE} ${PACKAGES_COVERAGE_BASE})" >> $GITHUB_ENV
           echo "TASK=$(echo "${{matrix.task}}" | awk 'BEGIN { FS = "-" } ; { print $1 }')" >> $GITHUB_ENV
           echo "QT=${QT:-$(echo "${{matrix.task}}" | awk 'BEGIN { FS = "-" } ; { print $2 }')}" >> $GITHUB_ENV
-          echo "APT_CACHE_DIR=$(cd ${APT_CACHE_DIR_BASE} && pwd)" >> $GITHUB_ENV
 
       - name: Print ENV vars 
         run: |
@@ -90,7 +76,6 @@ jobs:
           echo "PACKAGES_QT5: ${PACKAGES_QT5}"
           echo "PACKAGES_QML: ${PACKAGES_QML}"
           echo "PACKAGES_COVERAGE: ${PACKAGES_COVERAGE}"
-          echo "APT_CACHE_DIR: ${APT_CACHE_DIR}"
           echo "TASK: ${TASK}"
           echo "QT: ${QT}"
 
@@ -98,23 +83,11 @@ jobs:
         run: |
           sudo apt-add-repository -y ppa:ubuntu-toolchain-r/test
           sudo apt-add-repository -y ppa:beineri/opt-qt-5.14.2-focal
-          sudo apt-get -o Dir::Cache=$APT_CACHE_DIR/ update -q
-          sudo apt-get -o Dir::Cache=$APT_CACHE_DIR/ upgrade -y -q
 
-      - name: Install qt5 packages
-        run: |
-          sudo apt-get -o Dir::Cache=$APT_CACHE_DIR/ install -y -q ${PACKAGES_QT5}
-        if: endsWith(${{matrix.task}}, 'qt5')
-
-      - name: Install qmlui packages
-        run: |
-          sudo apt-get -o Dir::Cache=$APT_CACHE_DIR/ install -y -q ${PACKAGES_QML}
-        if: endsWith(${{matrix.task}}, 'qt5qml')
-
-      - name: Install coverage packages
-        run: |
-          sudo apt-get -o Dir::Cache=$APT_CACHE_DIR/ install -y -q ${PACKAGES_COVERAGE}
-        if: startsWith(${{matrix.task}}, 'coverage')
+      - uses: awalsh128/cache-apt-pkgs-action@v1.1.1
+        with:
+          packages: ${PACKAGES_ALL}
+          version: ${{runner.os}}-apt
 
       - name: Setup ccache
         uses: Chocobo1/setup-ccache-action@v1
