aqt installs not in path, but in path/Qt

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,14 +39,6 @@ jobs:
         lcov
       QT_MODULES:
         qtscript
-#        qt3d
-#        qtdeclarative
-#        qtquickcontrols2
-#        qtsvg
-#        qtmultimedia
-#        qtserialport
-#        qttools
-#        qtquick3d
 
     steps:
       - name: Checkout
@@ -68,7 +60,8 @@ jobs:
           echo "QT=${QT:-$(echo '${{matrix.task}}' | awk 'BEGIN { FS = '-' } ; { print $2 }')}" >> $GITHUB_ENV
           echo "QT_VERSION=5.15.2" >> $GITHUB_ENV
           echo "QT_MODULES_INSTALL=$(echo ${QT_MODULES})" >> $GITHUB_ENV
-          source $GITHUB_ENV && echo "QTDIR=/opt/qt${QT_VERSION}" >> $GITHUB_ENV
+          source $GITHUB_ENV && echo "QT_INSTALL_DIR=/opt/qt${QT_VERSION}" >> $GITHUB_ENV
+          source $GITHUB_ENV && echo "QTDIR=${QT_INSTALL_DIR}/Qt" >> $GITHUB_ENV
           source $GITHUB_ENV && echo "QMAKE=${QTDIR}/bin/qmake" >> $GITHUB_ENV
 
       - name: Print ENV vars
